--- a/+not-found.html
+++ b/+not-found.html
@@ -31,6 +31,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-1q9bdsx{border-bottom-left-radius:12px;border-bottom-right-radius:12px;border-top-left-radius:12px;border-top-right-radius:12px;}
 .r-1qsk4np{overflow-x:clip;overflow-y:clip;}
 .r-1rvyss1{border-bottom-color:rgba(255,255,255,0.20);border-left-color:rgba(255,255,255,0.20);border-right-color:rgba(255,255,255,0.20);border-top-color:rgba(255,255,255,0.20);}
+.r-1slz7xr{padding:14px;}
 .r-1sp51qo{padding:10px;}
 .r-1udh08x{overflow-x:hidden;overflow-y:hidden;}
 .r-1uu6nss{padding:5px;}
@@ -38,6 +39,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-42olwf{border-bottom-color:rgba(0,0,0,0.00);border-left-color:rgba(0,0,0,0.00);border-right-color:rgba(0,0,0,0.00);border-top-color:rgba(0,0,0,0.00);}
 .r-494qqr{padding:32px;}
 .r-4a18lf{border-bottom-color:rgba(255,0,0,1.00);border-left-color:rgba(255,0,0,1.00);border-right-color:rgba(255,0,0,1.00);border-top-color:rgba(255,0,0,1.00);}
+.r-570up9{border-bottom-color:rgba(58,58,110,1.00);border-left-color:rgba(58,58,110,1.00);border-right-color:rgba(58,58,110,1.00);border-top-color:rgba(58,58,110,1.00);}
 .r-60ke3l{border-bottom-color:rgba(0,128,0,1.00);border-left-color:rgba(0,128,0,1.00);border-right-color:rgba(0,128,0,1.00);border-top-color:rgba(0,128,0,1.00);}
 .r-6t2glc{border-bottom-left-radius:40px;border-bottom-right-radius:40px;border-top-left-radius:40px;border-top-right-radius:40px;}
 .r-9x6qib{border-bottom-color:rgba(204,214,221,1.00);border-left-color:rgba(204,214,221,1.00);border-right-color:rgba(204,214,221,1.00);border-top-color:rgba(204,214,221,1.00);}
@@ -185,6 +187,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-1dx08gc{background-color:rgba(26,10,10,1.00);}
 .r-1e6zz2d{color:rgba(221,221,221,1.00);}
 .r-1ei5mc7{cursor:inherit;}
+.r-1en7e38{background-color:rgba(42,74,58,1.00);}
 .r-1enofrn{font-size:12px;}
 .r-1euycsn{flex-direction:row-reverse;}
 .r-1ewcgjf{box-shadow:0px 1px 3px rgba(0,0,0,0.5);}
@@ -243,6 +246,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-1r74h94{left:8px;}
 .r-1r8g8re{height:36px;}
 .r-1rnoaur{overflow-y:auto;}
+.r-1s2bzr4{margin-top:12px;}
 .r-1seqbyq{background-color:rgba(74,74,110,1.00);}
 .r-1sg8ghl{z-index:1000;}
 .r-1shoneg{background-color:rgba(90,58,138,1.00);}
@@ -341,6 +345,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-ejnhls{background-color:rgba(58,58,94,1.00);}
 .r-eqz5dr{flex-direction:column;}
 .r-eu3ka{height:40px;}
+.r-evnaw{font-size:22px;}
 .r-f4gmv6{gap:16px;}
 .r-f6603h{background-color:rgba(90,45,45,1.00);}
 .r-f9v2oj{max-height:80%;}
@@ -408,6 +413,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-vvn4in{background-position:center;}
 .r-vw2c0b{font-weight:bold;}
 .r-wfqgy4{transition-duration:100ms;}
+.r-whyea9{background-color:rgba(42,42,78,1.00);}
 .r-ws9h79{left:4px;}
 .r-x11e5r{font-family:SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;}
 .r-x3cy2q{background-size:100% 100%;}
@@ -418,6 +424,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-zchlnj{right:0px;}
 .r-zd98yo{margin-bottom:32px;}
 .r-zebfov{box-shadow:0px 0px 4px rgba(239,68,68,0.50);}
+.r-zl2h9q{margin-bottom:2px;}
 .r-zz5t5d{font-size:28px;}
 @-webkit-keyframes r-11cv4x{0%{transform:rotate(0deg);}100%{transform:rotate(360deg);}}
 @-webkit-keyframes r-1iq689l{0%{transform:translateY(0%);}100%{transform:translateY(100%);}}
@@ -430,5 +437,5 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 @keyframes r-1pzkwqh{0%{transform:translateY(100%);}100%{transform:translateY(0%);}}
 @keyframes r-imtty0{0%{opacity:0;}100%{opacity:1;}}
 @keyframes r-q67da2{0%{transform:translateX(-100%);}100%{transform:translateX(400%);}}
-@keyframes r-t2lo5v{0%{opacity:1;}100%{opacity:0;}}</style><script type="module">globalThis.__EXPO_ROUTER_HYDRATE__=true;</script><link rel="preload" href="/intersections/_expo/static/css/global-59a30c46e27e8062b5a2e41d0f34ed99.css" as="style"><link rel="stylesheet" href="/intersections/_expo/static/css/global-59a30c46e27e8062b5a2e41d0f34ed99.css"></head><body><div id="root"><div class="css-g5y9jx r-13awgt0"></div></div><script src="/intersections/_expo/static/js/web/entry-73ec76a78816a348b05d96cde0cc7aca.js" defer></script>
+@keyframes r-t2lo5v{0%{opacity:1;}100%{opacity:0;}}</style><script type="module">globalThis.__EXPO_ROUTER_HYDRATE__=true;</script><link rel="preload" href="/intersections/_expo/static/css/global-59a30c46e27e8062b5a2e41d0f34ed99.css" as="style"><link rel="stylesheet" href="/intersections/_expo/static/css/global-59a30c46e27e8062b5a2e41d0f34ed99.css"></head><body><div id="root"><div class="css-g5y9jx r-13awgt0"></div></div><script src="/intersections/_expo/static/js/web/entry-6ae039f4de9486bd673f1e0dfe7c3878.js" defer></script>
 </body></html>
