--- a/+not-found.html
+++ b/+not-found.html
@@ -82,6 +82,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-3pj75a{padding-left:16px;padding-right:16px;}
 .r-cxgwc0{padding-left:24px;padding-right:24px;}
 .r-dd0y9b{padding-bottom:20px;padding-top:20px;}
+.r-dp7rxi{padding-bottom:40px;padding-top:40px;}
 .r-f8sm7e{margin-left:auto;margin-right:auto;}
 .r-gu64tb{padding-left:14px;padding-right:14px;}
 .r-is05cd{padding-left:8px;padding-right:8px;}
@@ -278,6 +279,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-1yis5wz{color:rgba(204,204,204,1.00);}
 .r-2eszeu::-webkit-scrollbar{display:none}
 .r-2eszeu{scrollbar-width:none;}
+.r-2llsf{min-height:100%;}
 .r-2o02ov{margin-top:40px;}
 .r-30o5oe{-moz-appearance:none;-ms-appearance:none;-webkit-appearance:none;appearance:none;}
 .r-356f0p{letter-spacing:0.35px;}
@@ -437,5 +439,5 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 @keyframes r-1pzkwqh{0%{transform:translateY(100%);}100%{transform:translateY(0%);}}
 @keyframes r-imtty0{0%{opacity:0;}100%{opacity:1;}}
 @keyframes r-q67da2{0%{transform:translateX(-100%);}100%{transform:translateX(400%);}}
-@keyframes r-t2lo5v{0%{opacity:1;}100%{opacity:0;}}</style><script type="module">globalThis.__EXPO_ROUTER_HYDRATE__=true;</script><link rel="preload" href="/intersections/_expo/static/css/global-59a30c46e27e8062b5a2e41d0f34ed99.css" as="style"><link rel="stylesheet" href="/intersections/_expo/static/css/global-59a30c46e27e8062b5a2e41d0f34ed99.css"></head><body><div id="root"><div class="css-g5y9jx r-13awgt0"></div></div><script src="/intersections/_expo/static/js/web/entry-c7d0840dd6b6ba120a68963f4f356e83.js" defer></script>
+@keyframes r-t2lo5v{0%{opacity:1;}100%{opacity:0;}}</style><script type="module">globalThis.__EXPO_ROUTER_HYDRATE__=true;</script><link rel="preload" href="/intersections/_expo/static/css/global-59a30c46e27e8062b5a2e41d0f34ed99.css" as="style"><link rel="stylesheet" href="/intersections/_expo/static/css/global-59a30c46e27e8062b5a2e41d0f34ed99.css"></head><body><div id="root"><div class="css-g5y9jx r-13awgt0"></div></div><script src="/intersections/_expo/static/js/web/entry-c94411f40fbcb976903206d016b5e877.js" defer></script>
 </body></html>
